// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorToolbar should render with default props 1`] = `
<DocumentFragment>
  .emotion-18 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-10 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-10 {
    padding: 0 10px;
  }
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

<div
    class="emotion-18 emotion-19"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div>
          <button
            class="emotion-6 emotion-7"
          >
            editor.editorToolbar.deleteEntry
          </button>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <button
          class="emotion-10 emotion-11"
        >
          editor.editorToolbar.published
        </button>
      </div>
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar should render with workflow controls hasUnpublishedChanges=false,isNewEntry=false,isModification=false,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  .emotion-18 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-8 {
    padding: 0 10px;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

<div
    class="emotion-18 emotion-19"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <button
          class="emotion-6 emotion-7"
        >
          editor.editorToolbar.save
        </button>
        <button
          class="emotion-8 emotion-9"
        >
          editor.editorToolbar.deletePublishedEntry
        </button>
      </div>
      <div
        class="emotion-12 emotion-13"
      />
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar should render with workflow controls hasUnpublishedChanges=false,isNewEntry=false,isModification=false,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  .emotion-16 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-12 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

<div
    class="emotion-16 emotion-17"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-12 emotion-13"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <button
          class="emotion-6 emotion-7"
        >
          editor.editorToolbar.save
        </button>
      </div>
      <div
        class="emotion-10 emotion-11"
      />
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=false,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  .emotion-18 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-8 {
    padding: 0 10px;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

<div
    class="emotion-18 emotion-19"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <button
          class="emotion-6 emotion-7"
        >
          editor.editorToolbar.save
        </button>
        <button
          class="emotion-8 emotion-9"
        >
          editor.editorToolbar.deleteUnpublishedEntry
        </button>
      </div>
      <div
        class="emotion-12 emotion-13"
      />
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=false,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  .emotion-18 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-8 {
    padding: 0 10px;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

<div
    class="emotion-18 emotion-19"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <button
          class="emotion-6 emotion-7"
        >
          editor.editorToolbar.save
        </button>
        <button
          class="emotion-8 emotion-9"
        >
          editor.editorToolbar.deleteUnpublishedEntry
        </button>
      </div>
      <div
        class="emotion-12 emotion-13"
      />
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=true,useOpenAuthoring=false 1`] = `
<DocumentFragment>
  .emotion-18 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-8 {
    padding: 0 10px;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

<div
    class="emotion-18 emotion-19"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <button
          class="emotion-6 emotion-7"
        >
          editor.editorToolbar.save
        </button>
        <button
          class="emotion-8 emotion-9"
        >
          editor.editorToolbar.deleteUnpublishedChanges
        </button>
      </div>
      <div
        class="emotion-12 emotion-13"
      />
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorToolbar should render with workflow controls hasUnpublishedChanges=true,isNewEntry=false,isModification=true,useOpenAuthoring=true 1`] = `
<DocumentFragment>
  .emotion-18 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1),0 2px 54px rgba(0,0,0,0.1);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-width: 800px;
  background-color: #fff;
  height: 66px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 21px;
  font-weight: 600;
  margin-right: 16px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-2 {
  font-size: 14px;
}

.emotion-4 {
  margin-top: 6px;
}

.emotion-4::after {
  height: 12px;
  width: 15.5px;
  margin-left: 5px;
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='15' height='11'><path fill='#005614' fill-rule='nonzero' d='M4.016 11l-.648-.946a6.202 6.202 0 0 0-.157-.22 9.526 9.526 0 0 1-.096-.133l-.511-.7a7.413 7.413 0 0 0-.162-.214l-.102-.134-.265-.346a26.903 26.903 0 0 0-.543-.687l-.11-.136c-.143-.179-.291-.363-.442-.54l-.278-.332a8.854 8.854 0 0 0-.192-.225L.417 6.28l-.283-.324L0 5.805l1.376-1.602c.04.027.186.132.186.132l.377.272.129.095c.08.058.16.115.237.175l.37.28c.192.142.382.292.565.436l.162.126c.27.21.503.398.714.574l.477.393c.078.064.156.127.23.194l.433.375.171-.205A50.865 50.865 0 0 1 8.18 4.023a35.163 35.163 0 0 1 2.382-2.213c.207-.174.42-.349.635-.518l.328-.255.333-.245c.072-.055.146-.107.221-.159l.117-.083c.11-.077.225-.155.341-.23.163-.11.334-.217.503-.32l1.158 1.74a11.908 11.908 0 0 0-.64.55l-.065.06c-.07.062-.139.125-.207.192l-.258.249-.26.265c-.173.176-.345.357-.512.539a32.626 32.626 0 0 0-1.915 2.313 52.115 52.115 0 0 0-2.572 3.746l-.392.642-.19.322-.233.382H4.016z'/></svg>");
}

.emotion-14 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  -webkit-flex: 10;
  -ms-flex: 10;
  flex: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 10px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-8 {
    padding: 0 10px;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0 solid;
  border-left-width: 1px;
  padding: 0 7px;
}

.emotion-6 {
  margin: 0 10px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

@media (max-width:1200px) {
  .emotion-6 {
    padding: 0 10px;
  }
}

<div
    class="emotion-18 emotion-19"
  >
    <mock-link
      classname="css-1rp52h5-ToolbarSectionBackLink-toolbarSection evqrzhe5"
      to=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        ←
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          editor.editorToolbar.backCollection
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          editor.editorToolbar.changesSaved
        </div>
      </div>
    </mock-link>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <button
          class="emotion-6 emotion-7"
        >
          editor.editorToolbar.save
        </button>
        <button
          class="emotion-8 emotion-9"
        >
          editor.editorToolbar.deleteUnpublishedChanges
        </button>
      </div>
      <div
        class="emotion-12 emotion-13"
      />
    </div>
    <div
      class="emotion-16 emotion-17"
    >
      <mock-settings-dropdown />
    </div>
  </div>
</DocumentFragment>
`;
